--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,10 +11,27 @@
   "imports": {
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0"
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "@google/genai": "https://esm.run/@google/genai",
+    "marked": "https://esm.run/marked"
   }
 }
 </script>
+<style>
+    .ai-response-content h1, .ai-response-content h2, .ai-response-content h3 { margin-top: 1.25em; margin-bottom: 0.625em; line-height: 1.2; font-weight: 600; }
+    .ai-response-content h1 { font-size: 1.5rem; }
+    .ai-response-content h2 { font-size: 1.25rem; }
+    .ai-response-content h3 { font-size: 1.1rem; }
+    .ai-response-content p { margin-bottom: 1em; }
+    .ai-response-content ul, .ai-response-content ol { margin-left: 1.5em; margin-bottom: 1em; }
+    .ai-response-content ul { list-style-type: disc; }
+    .ai-response-content ol { list-style-type: decimal; }
+    .ai-response-content li { margin-bottom: 0.25em; }
+    .ai-response-content code { background-color: #f3f4f6; padding: 0.2em 0.4em; margin: 0; font-size: 85%; border-radius: 3px; }
+    .ai-response-content pre { background-color: #f3f4f6; padding: 1em; border-radius: 6px; overflow-x: auto; }
+    .ai-response-content pre code { padding: 0; background-color: transparent; }
+    .ai-response-content blockquote { border-left: 0.25em solid #d1d5db; padding-left: 1em; margin-left: 0; font-style: italic; color: #4b5563; }
+</style>
 </head>
   <body>
     <div id="root"></div>
